--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
 }
-
+h1,h2,p{
+  margin: 0;
+}
 #header {
   width: 100%;
   position: fixed;
@@ -19,7 +21,7 @@ ul {
 }
 
 .logo {
-  width: 25px;
+  width: 110px;
   height: 50px;
 }
 
@@ -47,7 +49,7 @@ nav ul li {
 }
 
 nav ul li:hover {
-  background-color: cadetblue;
+  background-color: #0e94c0;
 }
 
 nav ul li a {
@@ -86,5 +88,53 @@ nav ul li a:hover {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 100vm;
+}
+
+#bungkus-about {
+  margin-bottom: 100px;
+  padding-left: 5%;
+  padding-right: 5%;
+  text-align: center;
+  overflow: hidden;
+}
+#bungkus-about h2{
+  font-size: 30px;
+  margin-bottom :10px;
+}
+.about-text{
+  max-width: 1170px;
+  width: 100%;
+  margin: 0 auto;
+}
+.pelajaran-bungkus{
+  width: 1020px;
+  height: 500px;
+  margin: 50px auto;
+}
+.pelajaran{
+  width: 300px;
+  height: 400px;
+  float: left;
+  margin: 0 20px;
+}
+
+#contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-family: 'Montserrat', sans-serif;
+}
+#bungkus-contact{
+  margin-bottom: 100px;
+  padding-left: 5%;
+  padding-right: 5%;
+  text-align: center;
+  overflow: hidden;
+}
+#contact h1{
+  font-size: 60px;
 }
